Bump upstreams
Adopt:
- yangtools-13.0.1
- mdsal-13.0.0
- controller-9.0.0
- aaa-0.19.1
- netconf-7.0.0

The test suite in southbound-impl is hacked together to not use
InstanceIdentifier mocking, reducing powermock exposure a bit.

Change-Id: Id4b5f1d8c11e57aee99f60c274061cb00489e87f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>